# friends-bot

./: .env.example  .gitignore  Makefile  README.md  README.ru.md  main.py  mypy.ini  pyproject.toml  ruff.toml
friends_bot/: database.py  main.py
src/friends_bot/: app_types.py  database.py  handlers.py  main.py
tests/: test_database.py  test_handlers.py
